:rocket: New stuff

--- a/app/views/transactions.handlebars
+++ b/app/views/transactions.handlebars
@@ -5,7 +5,7 @@
 </ul>
 <div class="content" style="padding: 3%;">
   <div class="row">
-    <button type="button" class="btn btn-success">Add</button>
+    <a href="/newTransaction"><button type="button" class="btn btn-success">Add</button></a>
     <button type="button" class="btn btn-success">Add Last</button>
   </div>
 </div>
